project/static/base/css/main.css
/* ===============================
 * Define mobile styles
 */
@media only screen { 
	/* Header */
	.top-bar {
		background: #171717;
		z-index: 100;
		margin-bottom: 40px;
	}

	#menu-burger {
		border-right: 1px solid #3A3A3C;
		height: 33px;
		width: 45px;
		padding: 0 10px;
		float: left;
		vertical-align: top;
	}

	#menu-burger a {
		display: block;
		color: white;
		line-height: 1.4em;
		font-size: 1.5em;
		text-align: center;
	}

	.top-bar .name {
		text-indent: -9999px;
		background: url("../images/jailbreak-header.png") no-repeat;
		height: 50px;
		margin: 6px 10px 0 60px;
	}

	.top-bar-section li:not(.has-form) a:not(.button) {
		background: #171717;
	}

	.top-bar-section li:not(.has-form) a:not(.button):hover {
		background: #3A3A3C;
	}

	.top-bar .right {
		margin-right: 30px;
	}

	.top-bar-section li.active:not(.has-form) a:not(.button) {
		padding: 0 15px;
		line-height: 45px;
		color: #3A3A3C;
		background: #FBD753;
		text-transform: uppercase;
		font-weight: 900;
		font-size: 0.7em;
	}

	.top-bar-section li.active:not(.has-form) a:not(.button):hover {
		background: #FFDF6B;
	}

	.dropdown li i {
		padding-right: 8px;
	}

	#site-title h1 {
		display: block;
		width: 383px;
		height: 75px;
	}

	#site-title a {
		display: block;
		height: 100%;
	}

	.off-canvas-list i[class^='fi-'] {
		padding-right: 10px;
		width: 25px;
		display: inline-block;
		text-align: center;
	}

	/* Home Main */
	#home-main {
		padding: 0;
		overflow: hidden;
		margin-top: -40px;
	}

	#map {
		border-width: 0 1px 1px 0;
		border-color: #E6E6E6;
		border-style: solid;
	}

	#social-feed,
	#main-stats,
	#radio {
		margin: 0 20px;
	}

	#main-stats {
		margin-top: 20px;
	}

	#main-stats ul.pricing-table {
		border-radius: 5px;
	}

	#countdown {
		position: relative;
		height: 100vh;
		background: #171717;
	}

	#countdown-bg {
		background: url(../images/kilmainham.jpg) no-repeat;
		background-size: 100%;
		height: 100vh;
		width: 100%;
		-webkit-filter: blur(3px);
		-moz-filter: blur(3px);
		-o-filter: blur(3px);
		-ms-filter: blur(3px);
		filter: blur(3px);
	}

	#timer-row {
		margin-top: -75vh;
	}

	#countdown-timer {
		width: 460px;
		display: inline-block;
	}

	#countdown-timer-wrap {
	    margin: 0 auto;
	    width: 470px
	}

	.timer-box {
		border-radius: 10px;
		background: rgba(0, 0, 0, 0.5);
		border: 1px solid #4C4C4E;
		padding: 20px 30px;
		color: #F5F5F5;
	}

	.timer-box h2 {
		color: #F5F5F5;
		text-align: center;
		margin-bottom: 25px;
	}

	.timer-box p {
		padding: 0 25px;
		text-align: center;
		margin-bottom: 0
	}

	.timer-box p a {
		color: #FBD753;
		border-bottom: 1px dotted #FBD753;
		
	}

	.flip-clock-label {
		color: #F5F5F5 !important;
		text-transform: uppercase;
		font-size: 83%;
	}

	/* List Styling */
	ul.list li h4 {
		font-size: 1.1em;
		margin: 0;
	}

	ul.list li p {
		font-size: 0.8em;
		margin: 0;
	}

	ul.list li a.button {
		display: inline-block;
		margin: 5px 0 0 0;
	}

	ul.list {
		margin: 0 0 20px;
	}

	ul.list li {
		position: relative;
		list-style: none;
		border-style: solid;
		border-color: #E6E6E6;
		border-width: 0 1px 1px 1px;
		padding: 35px 10px 10px 15px;
		background: #F5F5F5;
		
	}

	ul.list li.odd {
		background: #EBEBEB;
	}


	/* Cards */
	.card {
		overflow: hidden;
		position: relative;
		padding: 10px;
		border: 1px solid #E6E6E6;
		border-radius: 5px;
		margin-bottom: 20px;
		box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 3px 0px;
		color: rgb(85, 85, 85);
		border-width: 1px;
		border-style: solid;
		border-color: rgb(221, 221, 221);
		border-bottom-color: rgb(187, 187, 187);
		background: white;
	}

	.card p {
		margin: 0;
		padding-right: 50px;
	}

	.card .time {
		position: absolute;
		top: 4px;
		right: 8px;
		font-style: italic;
		font-size: 0.4em
	}

	.card .buttons {
		position: absolute;
		bottom: 10px;
		right: 10px;
	}

	.card .buttons .button {
		margin-bottom: 0;
		margin-right: 5px;
	}

	.card .buttons:after {
		content: '';
		clear: both;
	}

	.card .buttons a {
		text-decoration: 0;
		border: none;
	}

	/* Social Cards */
	.card .team {
		border-bottom: 1px solid #E6E6E6;
		padding-bottom: 5px;
		margin-bottom: 5px;
		position: relative;
	}

	.card .team img {
		display: inline-block;
		margin-right: 10px;
		border-radius: 4px;
		overflow: hidden;
	}

	.card .team p {
		padding: 0;
		margin: 0;
	}

	.card .body {
		position: relative;
	}

	.card .body .header {
		height: 40px;
		margin-bottom: 10px;
	}

	.card .body .avatar { 
		display: inline-block;
		margin-right: 10px;
	}

	.card .body h4 {
		display: inline-block;
		font-size: 1em;
		margin: 0;
		height: 50px;
		vertical-align: middle
	}

	.card .lower {
		height: 2.2em;
		margin-top: 10px !important;
		border-top: 1px solid #E6E6E6;
		padding-top: 10px;
	}

	.card .lower .logo {
		font-size: 1.6em;
	}

	.card .lower .button {
		float: right;
		margin: 0 5px 0 0;
	}

	.card .lower:last-child {
		margin: 0;
	}

	/* Checkin Cards */
	.checkin .team p {
		font-size: 85%
	}

	/* Twitter Cards */
	.twitter .body .avatar { 
		overflow: hidden;
		border-radius: 4px;
	}

	.twitter .lower .logo a {
		color: #01A1DE;
	}

	.twitter-media {
		padding: 0px;
		border-bottom: 1px solid #E6E6E6;
	}

	.twitter-media .team {
		padding: 10px;
		margin: 0;
	}

	.twitter-media .body {
		padding: 10px;
	}

	/* Facebook Embed */
	.facebook .lower .logo a {
		color: #3B5998;
	}

	.facebook .body p {
		margin: 0 0 10px 0;
		padding: 0
	}
	
	.facebook .body .media {
		display: block;
		margin: 0 auto;
		border: 1px solid #E6E6E6;
		box-shadow: 1px 1px 4px 0px #EBEBEB;
	}

	/* Super Cards */
	.super-card {
		background: #171717;
		border-color: #3A3A3C;
		color: #EBEBEB;
	}

	.super-card img {
		float: left;
		padding-right: 10px;
	}

	.super-card h4 {
		color: #EBEBEB;
	}

	.super-card p {
		margin-bottom: 20px;
		padding: 0;
	}

	.super-card a {
		color: #FBD753;
		border-bottom: 1px dotted #FBD753;
	}

	.super-card .time {
		top: 8px;
	}

	.super-card .button:not(.secondary) {
		color: #3A3A3C;
		background: #FBD753;
	}

	.super-card .buttons .donate-button {
		margin: 0;
		vertical-align: top;
		display: block;
		min-width: 130px;
		display: inline-block;
	}

	.super-card .buttons .donate-button .donate-link a,
	.super-card .buttons .donate-button .count {
		height: 26px;
	}

	.super-card .buttons .donate-button a {
		background: #FBD753;
		color: #3A3A3C;
	}

	.super-card .buttons .donate-button a:hover {
		background: #FFDF6B;
		color: #3A3A3C;
		-webkit-transition: background-color 300ms ease-out;
		-moz-transition: background-color 300ms ease-out;
		transition: background-color 300ms ease-out;
	}

	.super-card .buttons .count {
		color: #3A3A3C;
		background: #FFDF6B
	}

	/* Headers */
	h1, h2, h3 {
		color: #3A3A3C;
	}

	h4, h5, h6 {
		color: #4C4C4E;
	}

	/* Buttons */
	button, .button {
		background: #3A3A3C;
		color: #FBD753;
		text-transform: uppercase;
		border-radius: 3px;
	}

	button:hover, .button:hover {
		background: #4C4C4E;
		color: #FAE080;
	}

	button.small, .button.small {
		padding-top: 0.45rem;
		padding-right: 1rem;
		padding-bottom: 0.5rem;
		padding-left: 1rem;
		font-size: 0.55rem;
	}

	button i, .button i, .donate-button i {
		padding-right: 5px;
	}

	.donate-button {
	 	font-size: 1.2rem;
	 	margin: 4px 0;
	}

	.donate-button.small {
	 	font-size: 0.6rem;
	}

	.donate-button a {
		color: #FBD753;
	}

	.donate-link a {
		background: #3A3A3C;
		color: #FBD753;
		text-transform: uppercase;
		border-radius: 3px 0 0 3px;
		float: left;
		padding-top: 1.05rem;
		padding-bottom: 1rem;
		padding-right: 1rem;
		padding-left: 1rem;
	}

	.donate-button.small .donate-link a {
		height: 3.3em;
		padding-top: 0.5rem;
		padding-bottom: 0.5rem;
		padding-right: 0.5rem;
		padding-left: 0.5rem;
	}

	.donate-link a:hover {
		background: #4C4C4E;
		-webkit-transition: background-color 300ms ease-out;
		-moz-transition: background-color 300ms ease-out;
		transition: background-color 300ms ease-out;
	}

	.donate-button .count {
		background: #4C4C4E;
		color: #FBD753;
		text-transform: uppercase;
		border-radius: 0 3px 3px 0;
		display: inline-block;
		border-left: 1px solid #3A3A3C;
		padding-top: 0.8rem;
		padding-right: 1rem;
		padding-bottom: 1rem;
		padding-left: 1rem;
	}

	.donate-button.small .count {
		height: 3.3em;
		padding-top: 0.5rem;
		padding-right: 0.5rem;
		padding-bottom: 0.5rem;
		padding-left: 0.5rem;
	}

	/* Other */
	.clear {
		clear: both;
	}

	.distance {
		font-style: italic;
		font-size: 85%;
	}

	.alert-box ol,
	.alert-box ul {
		margin-bottom: 0;
	}

	/* Map */
	#map .flex-video {
		padding-top: 0;
		margin: 0;
	}

	#map-canvas {
		min-height: 450px;
		height: 100%;
		width: 100%;
	}

	.map-container img {
		max-width: none !important;
	}

	.info-window h3 {
		margin: 0;
	}

	.info-window h3 a {
		font-size: 1em !important;
	}

	.info-window h4 {
		margin: 0;
	}

	.info-window p {
		margin: 0 !important;
		font-size: 80%;
	}
} 


 /* ===============================
  * min-width 641px, medium screens
  */
@media only screen and (min-width: 40.063em) {
	/* Header */
	.top-bar .name {
		background: url("../images/jailbreak-header.png") no-repeat;
		width: 153px;
		margin: 6px 10px 0 30px;
	}

	#supporters-logo {
		background: url("../images/logos/supporters.png") top right no-repeat;
		text-indent: -9999px;
		height: 75px;
		margin: 15px 0 0 0;
	}

	/* Standings */
	#standings {
		margin: 0;
		padding: 0;
		overflow: hidden;
		margin-top: -40px;
	}

	#standings h3 {
		margin: 0;
		background: #EBEBEB;
		border-style: solid;
		border-color: #E6E6E6;
		border-width: 0 1px 1px 1px;
		padding: 6px 10px 2px;
		text-shadow: 0px 2px 3px #fff;
		text-transform: uppercase;
		text-align: center;
		color: #4C4C4E;
	}

	.rank {
	    width: 0px;
	    height: 0px;
	    color: #4C4C4E;
	    border-style: inset;
	    border-width: 44px 44px 0 0;
	    border-color: #4C4C4E transparent transparent transparent;
	    transform:rotate(360deg);
	    -ms-transform:rotate(360deg);
	    -moz-transform:rotate(360deg);
	    -webkit-transform:rotate(360deg);
	    -o-transform:rotate(360deg);
	    position: absolute;
	    top: 0;
	    left: 0;
	}

	.rank span {
	    text-align: center;
		top: -42px;
		left: 3px;
		position: relative;
		width: 93px;
		height: 93px;
		margin: 0px;
		color: #FBD753;
	}

	.last-checkin-time {
		position: absolute;
		top: 10px;
		right: 10px;
		font-size: 0.4em;
		font-style: italic;
	}

	#standings .full-standings-list {
		padding: 0;
		text-align: center;
		border-radius: 0 0 3px 3px;
	}

	#standings .full-standings-list a {
		display: block;
		padding: 10px;
	}

	#standings .full-standings-list a:hover {
		background: #EBEBEB;
	}
}

